--- a/gotaku4j-webui/pom.xml
+++ b/gotaku4j-webui/pom.xml
@@ -32,8 +32,8 @@
     <h2-version>1.4.200</h2-version>
     <spark-template-thymeleaf-version>2.7.1</spark-template-thymeleaf-version>
     <thymeleaf-version>3.0.12.RELEASE</thymeleaf-version>
-    <javalin-version>4.0.0.ALPHA1</javalin-version>
-    <commons-io-version>2.8.0</commons-io-version>
+    <javalin-version>4.1.1</javalin-version>
+    <commons-io-version>[2.10.0,)</commons-io-version>
   </properties>
 
   <dependencies>
@@ -60,11 +60,10 @@
       <artifactId>sorm4j</artifactId>
       <version>[1.0.0,)</version>
     </dependency>
-
     <dependency>
       <groupId>org.nkjmlab</groupId>
       <artifactId>gotaku4j-gotakudos-converter</artifactId>
-      <version>[0.9.0,)</version>
+      <version>${gotaku4j-version}</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
@@ -88,6 +87,13 @@
       <version>${log4j-version}</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>${log4j-version}</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf -->
     <dependency>
       <groupId>org.thymeleaf</groupId>
@@ -95,4 +101,13 @@
       <version>${thymeleaf-version}</version>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.2</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
