--- a/gotaku4j-webui/pom.xml
+++ b/gotaku4j-webui/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <packaging>war</packaging>
   <artifactId>gotaku4j-webui</artifactId>
@@ -9,35 +7,19 @@
   <parent>
     <groupId>org.nkjmlab</groupId>
     <artifactId>gotaku4j-parent</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.1</version>
   </parent>
-  <licenses>
-    <license>
-      <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-    </license>
-  </licenses>
-  <developers>
-    <developer>
-      <name>Yuu Nakajima</name>
-      <email>yuu.nkjm.pub@gmail.com</email>
-      <organization>nkjmlab.org</organization>
-      <organizationUrl>https://github.com/nkjmlab</organizationUrl>
-    </developer>
-  </developers>
 
   <properties>
     <failOnMissingWebXml>false</failOnMissingWebXml>
-    <jackson-version>2.12.3</jackson-version>
-    <h2-version>1.4.200</h2-version>
-    <spark-template-thymeleaf-version>2.7.1</spark-template-thymeleaf-version>
-    <thymeleaf-version>3.0.12.RELEASE</thymeleaf-version>
-    <javalin-version>4.1.1</javalin-version>
-    <commons-io-version>[2.10.0,)</commons-io-version>
   </properties>
 
   <dependencies>
-
+    <dependency>
+      <groupId>org.nkjmlab</groupId>
+      <artifactId>gotaku4j-gotakudos-converter</artifactId>
+      <version>${gotaku4j-version}</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -48,57 +30,19 @@
     <dependency>
       <groupId>io.javalin</groupId>
       <artifactId>javalin</artifactId>
-      <version>${javalin-version}</version>
+      <version>4.1.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>${commons-io-version}</version>
+      <version>2.11.0</version>
     </dependency>
-    <dependency>
-      <groupId>org.nkjmlab</groupId>
-      <artifactId>sorm4j</artifactId>
-      <version>[1.0.0,)</version>
-    </dependency>
-    <dependency>
-      <groupId>org.nkjmlab</groupId>
-      <artifactId>gotaku4j-gotakudos-converter</artifactId>
-      <version>${gotaku4j-version}</version>
-    </dependency>
-
-    <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>${h2-version}</version>
-    </dependency>
-
-    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>${jackson-version}</version>
-    </dependency>
-
-    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j-impl</artifactId>
-      <version>${log4j-version}</version>
-    </dependency>
-
-    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <version>${log4j-version}</version>
-    </dependency>
-
     <!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf -->
     <dependency>
       <groupId>org.thymeleaf</groupId>
       <artifactId>thymeleaf</artifactId>
-      <version>${thymeleaf-version}</version>
+      <version>3.0.13.RELEASE</version>
     </dependency>
   </dependencies>
   <build>
