--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
 
   <properties>
     <gotaku4j-version>${project.version}</gotaku4j-version>
-    <nkjmlab-utils-version>0.1.7</nkjmlab-utils-version>
-    <sorm-version>1.4.0-rc7</sorm-version>
+    <nkjmlab-utils-version>0.1.8</nkjmlab-utils-version>
+    <sorm4j-version>1.4.1</sorm4j-version>
     <xstream-version-in-plugin>1.4.15</xstream-version-in-plugin>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <additionalparam>-Xdoclint:none</additionalparam>
@@ -55,13 +55,13 @@
     <dependency>
       <groupId>org.nkjmlab</groupId>
       <artifactId>sorm4j</artifactId>
-      <version>${sorm-version}</version>
+      <version>${sorm4j-version}</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>2.0.202</version>
+      <version>2.0.206</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
     <dependency>
@@ -73,7 +73,7 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
-      <version>2.17.0</version>
+      <version>2.17.1</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
     <dependency>
