--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.nkjmlab</groupId>
   <artifactId>gotaku4j-parent</artifactId>
-  <version>0.9.1</version>
+  <version>0.9.2</version>
   <packaging>pom</packaging>
   <url>https://maven.nkjmlab.org/</url>
 
@@ -12,22 +12,6 @@
     <tag>HEAD</tag>
   </scm>
 
-
-  <repositories>
-    <repository>
-      <id>nkjmlab-maven-public</id>
-      <name>nkjmlab Public Maven Repository</name>
-      <url>https://maven.nkjmlab.org/repository/maven-public/</url>
-      <snapshots>
-        <enabled>true</enabled>
-        <updatePolicy>always</updatePolicy>
-      </snapshots>
-      <releases>
-        <enabled>true</enabled>
-        <updatePolicy>always</updatePolicy>
-      </releases>
-    </repository>
-  </repositories>
   <modules>
     <module>gotaku4j-webui</module>
     <module>gotaku4j-gui</module>
@@ -36,20 +20,18 @@
 
   <properties>
     <gotaku4j-version>${project.version}</gotaku4j-version>
-    <nkjmlab-utils-version>0.8.0</nkjmlab-utils-version>
-    <sorm4j-version>1.4.7</sorm4j-version>
-    <xstream-version-in-plugin>1.4.15</xstream-version-in-plugin>
+    <nkjmlab-utils-version>0.9.3</nkjmlab-utils-version>
+    <sorm4j-version>1.4.16</sorm4j-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <additionalparam>-Xdoclint:none</additionalparam>
     <downloadSources>true</downloadSources>
     <downloadJavadocs>true</downloadJavadocs>
   </properties>
 
   <dependencies>
-    <!-- https://mvnrepository.com/artifact/org.nkjmlab/nkjmlab-utils-core -->
+    <!-- https://mvnrepository.com/artifact/org.nkjmlab/nkjmlab-utils-helper -->
     <dependency>
       <groupId>org.nkjmlab</groupId>
-      <artifactId>nkjmlab-utils-core</artifactId>
+      <artifactId>nkjmlab-utils-helper</artifactId>
       <version>${nkjmlab-utils-version}</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.nkjmlab/sorm4j -->
@@ -98,30 +80,36 @@
     </dependency>
   </dependencies>
   <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>versions-maven-plugin</artifactId>
-          <version>2.2</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
     <plugins>
+      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>3.11.0</version>
         <configuration>
           <release>17</release>
         </configuration>
       </plugin>
-      <!-- ********** for Deployment to remote mvn server START ******* -->
-      <!-- from https://central.sonatype.org/pages/apache-maven.html#javadoc-and-sources-attachments -->
+      <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/versions-maven-plugin -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>2.15.0</version>
+        <configuration>
+          <ruleSet>
+            <ignoreVersions>
+              <ignoreVersion>
+                <type>regex</type>
+                <version>(?i).*(alpha|beta|snapshot|pre|rc|M\d).*</version>
+              </ignoreVersion>
+            </ignoreVersions>
+          </ruleSet>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>3.0.0</version>
+        <version>3.2.1</version>
         <executions>
           <execution>
             <phase>package</phase>
